--- a/michael.css
+++ b/michael.css
@@ -1,17 +1,17 @@
+.img {
+    max-height: 200px;
+}
+
 .align{
     text-align: center;
 }
 
-hr {
+p {
     color: black;
 }
-
-body {
-    background-color: darkred;
-}
-
-
 
 h1, h2, h3 {
     color: skyblue;
 }
+
+
